fix background on mobile and add minimum scale to viewport

--- a/assets/apps/global/scss/global.scss
+++ b/assets/apps/global/scss/global.scss
@@ -12,6 +12,8 @@ body {
         rgba(196, 102, 0, 0.6),
         rgba(155, 89, 182, 0.6)
     );
+    background-repeat: no-repeat;
+    background-attachment: fixed;
     height: 100%;
 }
 
